--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <!-- Navbar section starts here. -->
     <section class="navbar">
         <div class="container">
-            <h1>Navbar</h1>
+            <div class="logo">
+                Logo Image
+            </div>
+
+            <div class="menu">
+                Menu will be displayed here.
+            </div>
+
         </div>
     </section>
     <!-- Navbar section end here. -->
@@ -21,7 +28,11 @@
     <!-- food search section starts here. -->
     <section class="food-search">
         <div class="container">
-            <h1>Food Search</h1>
+            <form action="">
+                <input type="search" name="search" placeholder="search food items">
+                <input type="button" name="search" value="Search">
+            </form>
+
         </div>
     </section>
     <!-- food search section end here. -->
@@ -29,7 +40,20 @@
     <!-- category section starts here. -->
     <section class="categories">
         <div class="container">
-            <h1>Categories</h1>
+
+            <h2>Categories</h2>
+            <div class="box-3">
+                box 1
+            </div>
+
+            <div class="box-3">
+                box 2
+            </div>
+
+            <div class="box-3">
+                box 3
+            </div>
+
         </div>
     </section>
     <!-- category section end here. -->
@@ -37,7 +61,24 @@
      <!-- food-menu section starts here. -->
      <section class="food-menu">
         <div class="container">
-            <h1>Food Menu</h1>
+            <h2>Explore Foods</h2>
+
+            <div class="food-menu">
+                food 1
+            </div>
+
+            <div class="food-menu">
+                food 2
+            </div>
+
+            <div class="food-menu">
+                food 3
+            </div>
+
+            <div class="food-menu">
+                food 4
+            </div>
+
         </div>
     </section>
     <!-- food menu section end here. -->
@@ -45,7 +86,21 @@
     <!-- social section starts here. -->
     <section class="social">
         <div class="container">
-            <h1>Social</h1>
+            
+            <ul>
+                <li>
+                    <a href="#">Facebook</a>
+                </li>
+                <li>
+                   <a href="#">Instagram</a> 
+                </li>
+
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+
+            </ul>
+
         </div>
     </section>
     <!-- social section end here. -->
@@ -53,7 +108,9 @@
     <!-- footer section starts here. -->
     <section class="footer">
         <div class="container">
-            <h1>Footer</h1>
+            <p>
+              All rights reserved, Designed by <a href="#">Shashikant Solanki</a>  
+            </p>
         </div>
     </section>
     <!-- footer section end here. -->
