adding css to the website

--- a/index.html
+++ b/index.html
@@ -14,23 +14,29 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                Logo Image
+                <img src="images/logo.png" alt="Resturant Logo" class="img-responsive">
+            </div>
+            <div class="menu text-right">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Foods</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
             </div>
 
-            <div class="menu">
-                Menu will be displayed here.
-            </div>
+            <div class="clearfix"></div>
 
         </div>
     </section>
     <!-- Navbar section end here. -->
 
     <!-- food search section starts here. -->
-    <section class="food-search">
+    <section class="food-search text-center">
         <div class="container">
             <form action="">
                 <input type="search" name="search" placeholder="search food items">
-                <input type="button" name="search" value="Search">
+                <input type="button" name="search" value="Search" class="btn btn-primary">
             </form>
 
         </div>
