--- a/index.html
+++ b/index.html
@@ -47,19 +47,26 @@
     <section class="categories">
         <div class="container">
 
-            <h2>Categories</h2>
-            <div class="box-3">
-                box 1
+            <h2 class="text-center">Categories</h2>
+            <div class="box-3 float-container">
+                <img src="images/pizza.jpg" alt="Pizza" class="img-responsive img-curve">
+
+                <h3 class="float-text text-white">Pizza</h3>
             </div>
 
-            <div class="box-3">
-                box 2
+            <div class="box-3 float-container">
+                <img src="images/burger.jpg" alt="Burger" class="img-responsive img-curve">
+
+                <h3 class="float-text text-white">Burger</h3>
             </div>
 
-            <div class="box-3">
-                box 3
-            </div>
+            <div class="box-3 float-container">
+                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
 
+                <h3 class="float-text text-white">Momo</h3>
+            </div>
+            
+            <div class="clearfix"></div>
         </div>
     </section>
     <!-- category section end here. -->
@@ -67,23 +74,44 @@
      <!-- food-menu section starts here. -->
      <section class="food-menu">
         <div class="container">
-            <h2>Explore Foods</h2>
+            <h2 class="text-center">Explore Foods</h2>
 
-            <div class="food-menu">
+            <div class="food-menu-box">
+                <div class="food-menu-img">
+                    <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                </div>
+
+                <div class="food-menu-desc">
+                    <h4>Food Title</h4>
+                    <p class="food-price">$2.3</p>
+                    <p class="food-detail">
+                        Made with Italian Sauce, Chicken, and organice vegetables.
+                    </p>
+                    <br>
+
+                    <a href="order.html" class="btn btn-primary">Order Now</a>
+                </div>
+            </div>
+
+            <div class="food-menu-box">
                 food 1
             </div>
 
-            <div class="food-menu">
-                food 2
+            <div class="food-menu-box">
+                food 1
             </div>
 
-            <div class="food-menu">
-                food 3
+            <div class="food-menu-box">
+                food 1
             </div>
 
-            <div class="food-menu">
-                food 4
+            <div class="food-menu-box">
+                food 1
             </div>
+
+            
+
+            <div class="clearfix"></div>
 
         </div>
     </section>
